Added images file and moved image files for better file structure

--- a/recipes/onionsoup.html
+++ b/recipes/onionsoup.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Onion Soup</h1>
-        <img src="onionsoup.jpeg">
+        <img src="../images/onionsoup.jpeg">
         <p>Recipe for Onion Soup sourced from Allrecipes.com</p>
         <h2>Ingredients</h2>
             <ul>
