--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     <body>
         <h1>Salad</h1>
-        <img src="salad.jpeg">
+        <img src="../images/salad.jpeg">
         <p>Recipe for Cornucopia salad from Allrecipes.com</p>
         <h2>Ingredients & Dressings</h2>
             <h3>Ingredients</h3>
