--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 
     <body>
       <h1> Lasagna </h1>
-        <img src="squashlasagna.jpeg">
+        <img src="../images/squashlasagna.jpeg">
         <p>Random recipe for squash lasagna sourced from Allrecipes.com</p>
         <h2>Ingredients</h2>
           <ul>
